<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_marginLeft="7dp" android:layout_marginRight="7dp">

    <LinearLayout
        android:id="@+id/categoryLL"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="3">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idea_checkbox"
            android:id="@+id/checkBoxIdea"
            android:layout_weight="1"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important_checkbox"
            android:id="@+id/checkBoxImportant"
            android:layout_weight="1"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_checkbox"
            android:id="@+id/checkBoxTodo"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noteLL"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryLL"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:id="@+id/editTitle"
            android:maxLines="1"
            android:layout_weight=".2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:id="@+id/editDescription"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            android:layout_weight=".4"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:id="@+id/buttonCancel"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_button"
            android:id="@+id/buttonOk"
            android:layout_weight=".5"/>
    </LinearLayout>

</RelativeLayout>